--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <title>The precious things you say</title>
   <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
-
   <style>
-
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
@@ -15,19 +13,16 @@
       flex-direction: column;
       align-items: center;
       min-height: 100vh;
-
       background: linear-gradient(120deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1, #fad0c4);
       background-size: 400% 400%;
       animation: gradientBG 15s ease infinite;
       color: #ffffff;
     }
-
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-
     h1 {
       font-size: 4rem;
       font-weight: 900;
@@ -38,7 +33,6 @@
       margin-top: 40px;
       margin-bottom: 0;
     }
-
     #subtitle {
       font-size: 1.2rem;
       color: rgba(255, 255, 255, 0.8);
@@ -48,7 +42,41 @@
       margin-bottom: 40px;
       margin-top: 10px;
     }
-
     #app {
       display: flex;
-      flex-direction: column
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      max-width: 1200px;
+      padding: 20px;
+    }
+    #crossword-container {
+      width: 100%;
+      max-width: 900px;
+      background-color: rgba(0, 0, 0, 0.35);
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      margin-bottom: 20px;
+      min-height: 800px;
+    }
+  </style>
+</head>
+<body>
+  <h1>The precious things you say</h1>
+  <div id="subtitle">
+    Hey my love, today I couldn't stop thinking about your words,<br>
+    so I made you this.<br>
+    I love you.<br><br>
+    (Scroll down to see the crossword!)
+  </div>
+  <div id="app">
+    <div id="crossword-container">
+      <script
+        src="https://www.puzzlefast.com/en/puzzles/2025032022334950N/nsl-script?width=600px&height=800px"
+        type="text/javascript">
+      </script>
+    </div>
+  </div>
+</body>
+</html>
